--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -14,7 +14,7 @@ body {
 }
 
 section {
-  padding: 1rem 2rem;
+  padding: 0.5rem 0.5rem;
 }
 
 a {
@@ -94,5 +94,8 @@ main {
 
   .collapse-toggle {
     display: none;
+  }
+  section {
+    padding: 1rem 2rem;
   }
 }
