--- a/public/stylesheets/overlay.css
+++ b/public/stylesheets/overlay.css
@@ -16,6 +16,7 @@
 }
 
 .cinema:hover .overlay,
-.overlay-container:hover > .overlay {
+.overlay-container:hover > .overlay,
+.overlay-container.show-overlay > .overlay {
   opacity: 1;
 }
