--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -2,12 +2,27 @@
   box-sizing: border-box;
 }
 
+html {
+  height: stretch;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  min-height: stretch;
+  min-height: -moz-available;
+  min-height: -webkit-fill-available;
+}
+
 body {
   padding: 0;
   margin: 0;
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
-  background-image: linear-gradient(#1c153a 0, #34276c 50vh, #533ea7 100vh);
+  background-image: linear-gradient(#1c153a 0, #34276c 50%, #533ea7 100%);
   background-attachment: fixed;
+  background-position: center bottom;
   color: #e6e3f4;
   max-width: 100vw;
   overflow-x: hidden;
@@ -97,5 +112,15 @@ main {
   }
   section {
     padding: 1rem 2rem;
+  }
+}
+
+@-moz-document url-prefix() {
+  html {
+    height: 100%;
+    overflow-y: scroll;
+  }
+  body {
+    height: 100%;
   }
 }
