expanding showtimes with a similar card, no overlay

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,6 +2,7 @@
 @import url('./core.css');
 @import url('./header.css');
 @import url('./overlay.css');
+@import url('./expander.css');
 @import url('./popup.css');
 /* pages */
 @import url('./splash.css');
