--- a/public/stylesheets/movies.css
+++ b/public/stylesheets/movies.css
@@ -34,12 +34,16 @@ section.movies-section h2 {
   margin: 0;
   align-self: center;
   justify-self: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .movie .movie-showtimes {
   grid-area: showtimes;
   display: grid;
-  grid-template: repeat(auto-fill, 4rem) / repeat(auto-fill, minmax(33%, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+  grid-auto-rows: 4rem;
   grid-gap: 0.5rem;
   justify-content: center;
   align-items: center;
