--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,9 @@
 <header class='app-header'>
   <div class="header-main-row">
     <h1>Ciaocine: {{pageTitle}}</h1>
-    <button class="collapse-toggle" data-target="main-nav" role="switch">&UpDownArrow;</button>
+    <span class="collapse-toggle hamburger" data-target="main-nav" role="switch">
+      <span class="hamburger-inner"></span>
+    </span>
   </div>
   <div class="mobile-collapsible collapsed" id="main-nav">
 
