--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,11 @@
+@import url('./colors.css');
 /* generic */
 @import url('./core.css');
 @import url('./header.css');
 @import url('./overlay.css');
 @import url('./expander.css');
 @import url('./popup.css');
+@import url('./hamburger.css');
 /* pages */
 @import url('./splash.css');
 @import url('./calendar.css');
