hide the hamburger

--- a/public/stylesheets/hamburger.css
+++ b/public/stylesheets/hamburger.css
@@ -49,3 +49,9 @@
   opacity: 0;
   transition: top 0.2s ease-in 0s, opacity 0s 0.2s;
 }
+
+@media screen and (min-width: 600px) {
+  .hamburger {
+    display: none;
+  }
+}
