--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,6 +8,7 @@
   <div class="mobile-collapsible collapsed" id="main-nav">
 
   <nav aria-label='main navigation'>
+    <a href='/'>Home</a>
     <a href='/cinema'>Cinemas</a>
     <a href='/movies'>Movies</a>
   </nav>
