--- a/views/partials/showtimeCard.hbs
+++ b/views/partials/showtimeCard.hbs
@@ -3,7 +3,7 @@
         {{time startTime}}
     </h4>
     <div class="overlay">
-        {{> addToCalendar showtime=_id}}
+        {{> addToCalendar showtime=this}}
         <p class="extra-info">
         <span>
             {{cinema.name}}
