--- a/views/movies/index.hbs
+++ b/views/movies/index.hbs
@@ -3,7 +3,7 @@
   <h2>
     {{weekdaydate chosenDate}}
   </h2>
-   <p>{{movies.length}} movies are showing on {{weekdaydate chosenDate}} matching your filters</p>
+   <p>{{movies.length}} films are showing on {{weekdaydate chosenDate}} matching your filters</p>
 <nav>
   {{> moviesFilters label='sur le' urls=calendarUrls}}
   {{> moviesFilters label='à partir de' urls=hoursUrls}}
