--- a/views/auth/logout.hbs
+++ b/views/auth/logout.hbs
@@ -1,4 +1,4 @@
-{{!-- this file is only shown whenever there is an error during log out --}}
-{{#if errorMessage}}
-    {{errorMessage}}
-{{/if}}
+{{! this file is only shown whenever there is an error during log out }}
+{{#each errorMessages}}
+  <p class='error-message'>{{this}}</p>
+{{/each}}
