--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -16,7 +16,7 @@
     <button type='submit'>Submit</button>
   </form>
 
-  {{#if errorMessage}}
-    {{errorMessage}}
-  {{/if}}
+  {{#each errorMessages}}
+    <p class='error-message'>{{this}}</p>
+  {{/each}}
 </section>
