email field on signup form

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,11 +2,15 @@
   <form action='/auth/signup' enctype='multipart/form-data' method='POST'>
     <label>
       Username
-      <input type='text' name='username' />
+      <input type='text' name='username' required />
     </label>
     <label>
       Password
-      <input type='password' name='password' />
+      <input type='password' name='password' required />
+    </label>
+    <label>
+      Email
+      <input type='email' name='email' required />
     </label>
     <label>
       Profile picture
