--- a/views/cinema/viewByDate.hbs
+++ b/views/cinema/viewByDate.hbs
@@ -23,7 +23,7 @@
 {{/with}}
 
 <div class='showtimes-grouping'>
-  {{#each showtimes}}
+  {{#each movies}}
     <div class='showtime-for-group'>
       <div class='group-heading'>
         <h3>
