quick fix: remove-from-calendar

--- a/views/calendar/index.hbs
+++ b/views/calendar/index.hbs
@@ -30,7 +30,10 @@
                 {{cinema.zipcode}}
               </span>
             </p>
-            <button data-calendar='{{this._id}}'>Remove from calendar</button>
+            <button
+              class='remove-from-calendar'
+              data-calendar='{{this._id}}'
+            >Remove from calendar</button>
           </div>
         {{/each}}
       </div>
