--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -1,4 +1,4 @@
-<section>
+<section class='movies-section'>
 {{#with cinema}}
   <h2>Showtimes for {{name}}</h2>
   <p>
@@ -6,6 +6,7 @@
     {{city}}
     {{zipcode}}
   </p>
+  <p>{{../movies.length}} films are showing at {{name}}.</p>
   {{> favouriteCinema cinema=this liked=liked}}
   <ul>
     {{#each member_cards}}
@@ -25,7 +26,7 @@
   {{#each movies}}
     <div class='movie overlay-container expander-container'>
       {{> movieHeading movie=movie}}
-      {{> movieShowtimes showtimes=showtimes showDate=true}}
+      {{> movieShowtimes showtimes=showtimes}}
     </div>
   {{/each}}
 </div>
