--- a/views/partials/movieShowtimes.hbs
+++ b/views/partials/movieShowtimes.hbs
@@ -1,17 +1,17 @@
 <div class='movie-showtimes'>
   {{#ifGreaterThan showtimes.length 6}}
     {{#eachSlice ../showtimes 0 5}}
-      {{> showtimeCard this=this showDate=../showDate}}
+      {{> showtimeCard this}}
     {{/eachSlice}}
     {{#eachSlice ../showtimes 5 showtimes.length}}
-      {{> showtimeCard this=this class='expanded-only' showDate=../showDate}}
+      {{> showtimeCard this class='expanded-only'}}
     {{/eachSlice}}
     <div class="movie-showtime expander">
       Show more
     </div>
   {{else}}
     {{#each ../showtimes}}
-      {{> showtimeCard this=this showDate=../showDate}}
+      {{> showtimeCard this}}
     {{/each}}
   {{/ifGreaterThan}}
 </div>
