--- a/views/partials/showtimeCard.hbs
+++ b/views/partials/showtimeCard.hbs
@@ -1,18 +1,20 @@
 <div class='movie-showtime overlay-container {{class}}'>
-    <h4>
-        {{time startTime}}
-        {{#if showDate}}
-            {{date startTime}}
-        {{/if}}
-    </h4>
-    {{#if cinema.name}}
-    <div class="overlay">
-        {{> addToCalendar showtime=this}}
-        <p class="extra-info">
+  <h4>
+    {{time startTime}}
+  </h4>
+  {{#if @root.showDate}}
+    <p>
+      {{dateMonth startTime}}
+    </p>
+  {{/if}}
+  {{#if cinema.name}}
+    <div class='overlay'>
+      {{> addToCalendar showtime=this}}
+      <p class='extra-info'>
         <span>
-            {{cinema.name}}
+          {{cinema.name}}
         </span>
-        </p>
+      </p>
     </div>
-    {{/if}}
+  {{/if}}
 </div>
