cinema view groups by movie and shows for one date

--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -15,12 +15,10 @@
       </li>
     {{/each}}
   </ul>
-  <p>
-    <a href='/cinema/{{_id}}/byDate'>
-      View listings by date
-    </a>
-  </p>
 {{/with}}
+<nav>
+  {{> moviesFilters label='sur le' urls=calendarUrls}}
+</nav>
 
 <div class='movies'>
   {{#each movies}}
