filters visible for cinema view

--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -21,6 +21,11 @@
   </p>
 {{/with}}
 
+<nav>
+  {{> moviesFilters label='sur le' urls=calendarUrls}}
+  {{> moviesFilters label='à partir de' urls=hoursUrls}}
+</nav>
+
 <div class='movies'>
   {{#each movies}}
     <div class='movie overlay-container expander-container'>
